fix: z-index in overlay card

--- a/components/cards.css
+++ b/components/cards.css
@@ -243,6 +243,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+
+  z-index: var(--zindex-two);
 }
 
 .overlay-text {
